[package]
name = "stilts"
version = "0.3.1"
description = "A compiled templating language with rust syntax"
edition = "2021"
authors = ["Jack <notatrocious@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["template", "jinja2", "html", "markup"]
categories = ["template-engine"]
homepage = "https://github.com/Atrociously/stilts"
repository = "https://github.com/Atrociously/stilts"

[workspace]
members = [
    "stilts-lang",
    "stilts-macros",
    "testing",
]

[workspace.dependencies]
miette = "7.2"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full"] }

[features]
debug = ["stilts-macros/debug"]
err-narrate = ["stilts-macros/narratable"]
err-fancy = ["stilts-macros/fancy"]
actix-web = ["stilts-macros/actix-web"]
axum = ["stilts-macros/axum"]
gotham = ["stilts-macros/gotham"]
rocket = ["stilts-macros/rocket"]
warp = ["stilts-macros/warp"]
tide = ["dep:tide"]

[dependencies]
html-escape = "0.2"
serde = "1.0"
serde_json = "1.0"
stilts-macros = { path = "./stilts-macros", version = "0.3" }
tide = { version = "0.16", optional = true }
