[package]
name = "stilts-lang"
version = "0.3.0"
edition = "2021"

[features]
extra-traits = ["syn/extra-traits"]

[dependencies]
aho-corasick = "1.1"
bitflags = "2.6"
miette.workspace = true
proc-macro2.workspace = true
syn.workspace = true
thiserror = "1.0"
winnow = { version = "0.6.18", features = ["simd"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
