[package]
name = "stilts-lang"
description = "The parser for stilts"
version = "0.3.2"
edition = "2021"
license = "MIT"

[features]
extra-traits = ["syn/extra-traits"]
debug = ["winnow/debug"]

[dependencies]
aho-corasick = "1.1"
bitflags = "2.6"
miette.workspace = true
proc-macro2.workspace = true
syn.workspace = true
thiserror = "1.0"
winnow = { version = "0.6.18", features = ["simd"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
