[package]
name = "stilts-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
narratable = []
fancy = ["miette/fancy"]

[dependencies]
# required for macro parsing and expansion
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"

# parser for the stilts language
stilts-lang = { path = "../stilts-lang" }

# libraries to enable certain useful features
serde = { version = "1", features = ["derive"] }
cargo_metadata = "0.15"
miette = "5.9"
