[package]
name = "stilts-macros"
version = "0.2.1"
description = "The macros that generate the templates for stilts"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[features]
narratable = []
fancy = ["miette/fancy"]
actix-web = ["mime_guess"]
axum = ["mime_guess"]
gotham = ["mime_guess"]

[dependencies]
# required for macro parsing and expansion
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"

# parser for the stilts language
stilts-lang = { path = "../stilts-lang", version = "0.2" }

# libraries to enable certain useful features
serde = { version = "1", features = ["derive"] }
cargo_metadata = "0.15"
miette = "5.9"
mime_guess = { version = "2.0.4", default-features = false, optional = true }
