[package]
name = "stilts-macros"
version = "0.3.0"
description = "The macros that generate the templates for stilts"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[features]
narratable = []
fancy = ["miette/fancy"]
actix-web = []
axum = []
gotham = []
rocket = []
warp = []

[dependencies]
# required for macro parsing and expansion
syn.workspace = true
proc-macro2.workspace = true
quote = "1"

# parser for the stilts language
stilts-lang = { path = "../stilts-lang", version = "0.3.0", features = ["extra-traits"] }

# libraries to enable certain useful features
serde = { version = "1", features = ["derive"] }
cargo_metadata = "0.15"
miette.workspace = true
mime_guess = { version = "2.0", default-features = false }
