[package]
name = "stilts-testing"
version = "0.1.0"
edition = "2021"

[features]
actix-web = ["dep:actix-web", "stilts/actix-web"]
axum = ["dep:axum", "stilts/axum"]
gotham = ["dep:gotham", "stilts/gotham"]
rocket = ["dep:rocket", "stilts/rocket"]
warp = ["dep:warp", "stilts/warp"]

[dependencies]
actix-web = { version = "*", optional = true }
axum = { version = "*", optional = true }
gotham = { version = "*", optional = true }
rocket = { version = "*", optional = true }
warp = { version = "*", optional = true }

stilts = { path = "../" }

[dev-dependencies]
stilts = { path = "../", features = ["err-fancy"]}
divan = "0.1.11"

[[bench]]
name = "all"
harness = false

[package.metadata.stilts]
trim = true

[package.metadata.stilts.escape]
"CustomEscaper" = ["js"]
