[package]
name = "tree-sitter-Stilts"
description = "Stilts grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "Stilts"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-Stilts"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
